added new link and changed picture

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Waleed Ahmad</title>
+    <title>Waleed Ahmad</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -32,6 +32,9 @@
         </div>
         <div><img class="icons" src="./src/icons/instagram.png" onclick="window.open('http://www.instagram.com/waleedahmad98/')">
             <h3 class="icon-names">Instagram</h3>
+        </div>
+        <div><img class="icons" src="./src/icons/fiverr.png" onclick="window.open('http://www.fiverr.com/wahmad1024/')">
+            <h3 class="icon-names">Fiverr</h3>
         </div>
         <div><img class="icons" src="./src/icons/behance.png" onclick="window.open('http://www.behance.net/waleedahmad5/')">
             <h3 class="icon-names">Behance</h3>
