updated spotify link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div><img class="icons" src="./src/icons/psn.png" onclick="window.open('https://my.playstation.com/profile/LordWeasel98')">
             <h3 class="icon-names">PlayStation Network</h3>
         </div>
-        <div><img class="icons" src="./src/icons/spotify.png" onclick="window.open('https://open.spotify.com/user/gqilzuuy5lrpk4zhtk7lmt2bm?si=2J9vAt-FRqGpWH4nwt_6-g')">
+        <div><img class="icons" src="./src/icons/spotify.png" onclick="window.open('https://open.spotify.com/user/5p9cwtad1zhnngneojjoqontd')">
             <h3 class="icon-names">Spotify</h3>
         </div>
     </div>
