--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         <div><img class="icons" src="./src/icons/fiverr.png" onclick="window.open('http://www.fiverr.com/wahmad1024/')">
             <h3 class="icon-names">Fiverr</h3>
         </div>
+        <div><img class="icons" src="./src/icons/googleplay.png" onclick="window.open('https://play.google.com/store/apps/developer?id=WaleedAhmad98')">
+            <h3 class="icon-names">Fiverr</h3>
+        </div>
         <div><img class="icons" src="./src/icons/behance.png" onclick="window.open('http://www.behance.net/waleedahmad5/')">
             <h3 class="icon-names">Behance</h3>
         </div>
