--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h3 class="icon-names">Fiverr</h3>
         </div>
         <div><img class="icons" src="./src/icons/googleplay.png" onclick="window.open('https://play.google.com/store/apps/developer?id=WaleedAhmad98')">
-            <h3 class="icon-names">Fiverr</h3>
+            <h3 class="icon-names">Google Play Store</h3>
         </div>
         <div><img class="icons" src="./src/icons/behance.png" onclick="window.open('http://www.behance.net/waleedahmad5/')">
             <h3 class="icon-names">Behance</h3>
