--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             Programmer | Graphic Designer
         </h2>
     </div>
+    <div class="arrow bounce"></div>
     <div id="icon-container">
         <div>
             <a href="mailto:w.ahmad1024@gmail.com"><img class="icons" src="./src/icons/email.png">
