--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         </svg>
                     </div>
                     <!-- Linkedin -->
-                    <div class="link" onclick = "window.open('https://www.linkedin.com/wahmad1024', '_blank')">
+                    <div class="link" onclick = "window.open('https://www.linkedin.com/in/wahmad1024', '_blank')">
                         <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="40"
                             viewBox="0 0 24 24" style=" fill:#000000;">
                             <path
