--- a/index.html
+++ b/index.html
@@ -95,12 +95,6 @@
                 <h1 class="bold sub-intro animate" style="transition: 1s; transition-delay: 0.2s">WALL PANTHER - ANDROID
                     APPLICATION</h1>
                 <div class="columns mt-5">
-                    <div class="column is-half is-mobile is-flex-desktop animate" style="justify-content: space-evenly; transition: 1s; transition-delay: 0.2s">
-                        <img src="https://user-images.githubusercontent.com/60568107/131874999-3ed78036-6a41-4904-8d07-7f876019f194.jpg"
-                            style="border-radius: 10px" />
-                        <img src="https://user-images.githubusercontent.com/60568107/131875002-6f6174a7-7652-48d1-b337-e4c9fcab2597.jpg"
-                            style="border-radius: 10px" />
-                    </div>
                     <div class="column is-half animate"
                         style="text-align: right; transition: 1s; transition-delay: 0.2s">
                         <p>
@@ -117,7 +111,7 @@
                             Learn More
                         </button>
                     </div>
-                    <div class="column is-half is-desktop is-flex-desktop animate" style="justify-content: space-evenly; transition: 1s; transition-delay: 0.2s">
+                    <div class="column is-half is-flex-desktop animate" style="justify-content: space-evenly; transition: 1s; transition-delay: 0.2s">
                         <img src="https://user-images.githubusercontent.com/60568107/131874999-3ed78036-6a41-4904-8d07-7f876019f194.jpg"
                             style="border-radius: 10px" />
                         <img src="https://user-images.githubusercontent.com/60568107/131875002-6f6174a7-7652-48d1-b337-e4c9fcab2597.jpg"
